<resources>
    <string name="app_name">Cubatómetro</string>

    <!-- Login activity -->
    <string name="login_text">Inicie sesión para seguir</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="login_label">Iniciar sesión</string>
    <string name="registrar_usuario_label">Registrarse</string>
    <string name="recordar_usuario">Recordar usuario en este dispositivo</string>

    <!-- Create group activity -->
    <string name="create_group_label">Nuevo grupo</string>
    <string name="titulo_grupo_label">Nombre del grupo</string>
    <string name="añadir_miembros_label">Añadir miembros</string>
    <string name="buscar_miembros_label">Buscar miembro</string>
    <string name="crear_grupo_button">Crear Grupo</string>

    <!-- Contador activity -->
    <string name="contador_description">Añade la cantidad de cada tipo de bebida que hayas tomado</string>
    <string name="contador_label">Añadir registro</string>
    <!-- Ranking activity -->
    <string name="ranking_label">Ranking</string>
    <string name="miembro_label">Miembro</string>
    <string name="puntuacion_label">Puntuación</string>

    <!-- Register user activity -->
    <string name="username_register_label">Nombre de usuario</string>
    <string name="email_register_label">Correo electrónico</string>
    <string name="password_register_label">Contraseña</string>
    <string name="foto_perfil_label">Elige una foto de perfil</string>

    <!-- Groups activity -->
    <string name="dialog_message">¿Estás seguro de que quieres eliminar este grupo?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>

    <!-- Menu -->
    <string name="menu_create_group">Crear grupo</string>
    <string name="menu_update_registro">Actualizar puntuación</string>
    <string name="menu_view_stadistics">Ver estadísticas</string>
    <string name="menu_info_ranking">Infromación sobre bebidas</string>
    <string name="menu_logout">Cerrar Sesión</string>

    <!-- Chart -->
    <string name="stadistics_label">Registros</string>
    <string name="introduce_dates_range_label">Introduce rango de fechas</string>
    <string name="beginning_date_label">Fecha de inicio: </string>
    <string name="end_date_label">Fecha de fin: </string>
    <string name="search_button">Buscar registros</string>
    <string name="selected_dates_range_label">Desde %1s hasta %2s</string>

    <!-- Score fragment -->
    <string name="botella_label">Botellas</string>
    <string name="media_botella_label">Medias botellas</string>
    <string name="botella_vino_label">Botellas de vino</string>
    <string name="litro_cerveza_label">Litros de cerveza</string>
    <string name="jarra_cerveza_label">Jarras de cerveza</string>
    <string name="lata_cerveza_label">Latas de cerveza</string>
    <string name="chupito_label">Chupitos</string>
    <string name="botella_score_label">20 pts.</string>
    <string name="media_botella_score_label">8 pts.</string>
    <string name="botella_vino_score_label">4 pts.</string>
    <string name="litro_cerveza_score_label">3 pts.</string>
    <string name="jarra_cerveza_score_label">2 pts.</string>
    <string name="lata_cerveza_score_label">1 pts.</string>
    <string name="chupito_score_label">1 pts.</string>


</resources>
