<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="upv.dadm.cubatometro.CreateGroupActivity">

    <EditText
        android:id="@+id/groupname_edittext_creategroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/titulo_grupo_label"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/groupicon_imageview_creategroup"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addmembers_textview_creategroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/añadir_miembros_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupicon_imageview_creategroup" />

    <SearchView
        android:id="@+id/searchmember_searchview_creategroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/buscar_miembros_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addmembers_textview_creategroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addmembers_recyclerview_creategroup"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchmember_searchview_creategroup" />

    <Button
        android:id="@+id/button_creategroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Crear grupo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addmembers_recyclerview_creategroup" />

    <ImageView
        android:id="@+id/groupicon_imageview_creategroup"
        android:layout_width="77dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_secure" />

</androidx.constraintlayout.widget.ConstraintLayout>
