<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">


    <ProgressBar
        android:id="@+id/progressBar_stadistics"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"/>

    <TextView
        android:id="@+id/activity_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_stadistics_activity_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/introduce_dates_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/introduce_dates_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce_dates_range_label"
        app:layout_constraintTop_toBottomOf="@id/activity_title_textView"
        app:layout_constraintBottom_toTopOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introduce_dates_textView"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/initial_date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginning_date_label"
                app:layout_constraintEnd_toStartOf="@id/initial_date_editText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/final_date_textView"
                android:layout_marginEnd="15dp"
                android:paddingBottom="20dp"
                />

            <TextView
                android:id="@+id/final_date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/final_date_editText"
                app:layout_constraintTop_toBottomOf="@id/initial_date_textView"
                android:layout_marginEnd="15dp"
                android:paddingTop="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/initial_date_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/introduce_dates_textView"
                />

            <EditText
                android:id="@+id/final_date_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintBottom_toTopOf="@id/search_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/initial_date_editText"
                />
        </LinearLayout>
    </LinearLayout>




    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:onClick="onClickSearchButton"
        />

    <TextView
        android:id="@+id/selected_dates_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_dates_range_label"
        app:layout_constraintTop_toBottomOf="@id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line_chart"
        android:visibility="invisible"
        />


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_dates_textView">

    </com.github.mikephil.charting.charts.LineChart>
</androidx.constraintlayout.widget.ConstraintLayout>